--- a/.dvc/config
+++ b/.dvc/config
@@ -2,7 +2,6 @@
     remote = ssh-storage
 ['remote "ssh-storage"']
     url = ssh://user-data-srv@10.0.2.4/opt/datasets_for_mlops
-    password = vfcktybwf1
+    password = vcktybwf1
     user = user-data-srv
     port = 22
-1
